@@ -1,7 +1,8 @@
 /* KallistiOS ##version##
 
-   network.c
-   (c)2002 Dan Potter
+   basic.c
+   Copyright (C) 2002 Dan Potter
+   Copyright (C) 2009 Lawrence Sebald
 */
 
 #include <kos.h>
@@ -13,14 +14,44 @@ networking system and wait for a bit to let you have a chance to
 ping it, etc. Note that this program is totally portable as long
 as your KOS platform has networking capabilities, but I'm leaving
 it in "dreamcast" for now.
- 
+
+Now with statistics printing!
+
 */
 
 KOS_INIT_FLAGS(INIT_DEFAULT | INIT_NET);
 
 int main(int argc, char **argv) {
+	net_ipv4_stats_t ip;
+	net_udp_stats_t udp;
+
 	/* Wait for a bit so the user can ping, etc */
-	usleep(10 * 1000 * 1000);
+	thd_sleep(10 * 1000);
+
+	/* Print out some statistics about the connection. */
+	ip = net_ipv4_get_stats();
+	udp = net_udp_get_stats();
+
+	printf("IPv4 Stats:\n"
+	       "Packets sent successfully:       %6d\n"
+	       "Packets that failed to send:     %6d\n"
+	       "Packets received successfully:   %6d\n"
+	       "Packets rejected (bad size):     %6d\n"
+	       "                 (bad checksum): %6d\n"
+	       "                 (bad protocol): %6d\n\n",
+	       ip.pkt_sent, ip.pkt_send_failed, ip.pkt_recv, ip.pkt_recv_bad_size,
+	       ip.pkt_recv_bad_chksum, ip.pkt_recv_bad_proto);
+
+	printf("UDP Stats:\n"
+	       "Packets sent successfully:       %6d\n"
+	       "Packets that failed to send:     %6d\n"
+	       "Packets received successfully:   %6d\n"
+	       "Packets rejected (bad size):     %6d\n"
+	       "                 (bad checksum): %6d\n"
+	       "                 (no socket):    %6d\n\n",
+	       udp.pkt_sent, udp.pkt_send_failed, udp.pkt_recv,
+	       udp.pkt_recv_bad_size, udp.pkt_recv_bad_chksum,
+	       udp.pkt_recv_no_sock);
 
 	return 0;
 }
