@@ -185,6 +185,9 @@ KallistiOS version 1.3.0 -----------------------------------------------
       correct polygon header to be sent for sprites [LS]
 - DC  Added in some support functions for PVR modifier volumes (and an example
       program that uses them) [LS]
+- DC  Added a modifier volume example using textures [LS]
+- DC  Added a simple statistics system to the IPv4 and UDP layers of the
+      network stack [LS]
 
 KallistiOS version 1.2.0 -----------------------------------------------
 - DC  Fix to use DCARM7_CFLAGS when compiling ARM driver [Christian Groessler == CG]
